# procshape

./: .gitignore  LICENSE  README.md  requirements.txt  setupy.py
demo/: baseshapes_physics.py
docs/: dev_guidelines.md  planets.md
geomstore/: CMakeLists.txt  vertex.cpp  vertex.hpp
geomstore/p3dmodulebuilder/: CMakeLists.txt  additional_libs.cmake  config.ini  test.py
geomstore/p3dmodulebuilder/scripts/: interrogate.py
geomstore/p3dmodulebuilder/source/: CMakeLists.txt  aabb.cpp  aabb.h  common.cpp  common.h  config_module.cpp  config_module.h  csg.cpp  csg.h  geomstore.cpp  geomstore.h  geomstore_old.cpp  interrogate.in  interrogate_module.cpp  interrogate_wrapper.cpp  mesh.cpp  mesh.h  octree.cpp  octree.h  shape.cpp  shape.h  triangle.cpp  triangle.h  triangle.hpp  tritri.c  tritri.h  vertex.cpp  vertex.h
geomstore/src/: CMakeLists.txt  common.cpp  common.hpp  geomstore.cpp  geomstore.hpp  triangle.cpp  vertex.cpp  vertex.hpp
procshape/: __init__.py  geomstreamer.py
procshape/dualcontour/: __init__.py  common.py  constants.py  dualcontour3d.py  qef.py  utils2d.py  utils3d.py
procshape/geomstore/: common.hpp  geomstore.hpp  triangle.hpp
procshape/helpers/: __init__.py  bullet.py  shapetools.py  types.py  vectormath.py
procshape/helpers/tests/: tests_shapetools.py  tests_vectormath.py
procshape/producer/: __init__.py  base.py  planet.py  shape.py  staticobject.py  terrain.py
procshape/shape/: __init__.py  cuboid.py  cylinder.py  geomstore.py  plane.py  spheroid.py
